Name:           replicated-log
Version:        0.1
Stability:      experimental
Synopsis:       Replicated log distributed abstraction.
License:        Apache-2.0
Copyright:      © 2013 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       replicated-log

Flag distributed-benchmarks
  Description: Enables distributed benchmarks.
  Default: False

Library
  Exposed-Modules:  Control.Distributed.Log
                    Control.Distributed.Log.Persistence
                    Control.Distributed.Log.Persistence.LevelDB
                    Control.Distributed.Log.Persistence.Paxos
                    Control.Distributed.Log.Policy
                    Control.Distributed.Log.Snapshot
                    Control.Distributed.Process.Batcher
                    Control.Distributed.Process.Monitor
                    Control.Distributed.Process.Timeout
                    Control.Distributed.State
  Other-Modules:    Control.Distributed.Log.Internal
                    Control.Distributed.Log.Messages
                    Control.Distributed.Log.Trace
  Hs-Source-Dirs:   src/
  Build-Depends:    base >= 4.7,
                    binary >= 0.6,
                    bytestring >= 0.9.2,
                    cereal,
                    consensus,
                    consensus-paxos,
                    containers >= 0.5,
                    constraints >= 0.4,
                    directory >= 1.2.1,
                    distributed-process-scheduler,
                    distributed-static >= 0.2,
                    exceptions,
                    filepath >= 1.4.0,
                    leveldb-haskell >= 0.6.3,
                    mtl >= 2.0,
                    network-transport >= 0.3,
                    syb >= 0.3,
                    rank1dynamic >= 0.1,
                    safecopy >= 0.8,
                    stm,
                    template-haskell >= 2.7.0
  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      ExistentialQuantification
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
                      TupleSections
  Other-Extensions:   TemplateHaskell
                      TypeFamilies

  Ghc-Options: -Wall -Werror

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          ut.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    Test
                    Transport

  Ghc-Options: -Wall -Werror -threaded -eventlog -debug -with-rtsopts=-l-au

  Build-Depends:    base >= 4.7,
                    binary >= 0.6,
                    consensus,
                    consensus-paxos,
                    constraints >= 0.4,
                    containers >= 0.5,
                    directory >= 1.2.2,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static >= 0.2.0,
                    exceptions >= 0.8.0.2,
                    filepath >= 1.3,
                    mtl >= 2.0.0,
                    network >= 2.4.2.3,
                    network-transport,
                    network-transport-inmemory,
                    network-transport-tcp,
                    random,
                    rank1dynamic >= 0.1,
                    replicated-log,
                    tasty,
                    tasty-files,
                    unix
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
                      CPP

Test-Suite scheduler-tests
  Type:             exitcode-stdio-1.0
  Main-Is:          scheduler-tests.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    Test
                    Transport

  Ghc-Options: -Wall -Werror -threaded -eventlog -debug -with-rtsopts=-l-au

  Build-Depends:    base >= 4.7,
                    binary >= 0.6,
                    consensus,
                    consensus-paxos,
                    constraints >= 0.4,
                    containers >= 0.5,
                    directory >= 1.2.2,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static >= 0.2.0,
                    exceptions >= 0.8.0.2,
                    filepath >= 1.3,
                    mtl >= 2.0.0,
                    network >= 2.4.2.3,
                    network-transport,
                    network-transport-inmemory,
                    network-transport-tcp,
                    random,
                    rank1dynamic >= 0.1,
                    replicated-log,
                    tasty,
                    tasty-files,
                    unix
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
                      CPP

Test-Suite persistence
  Type:             exitcode-stdio-1.0
  Main-Is:          persistence.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests

  Ghc-Options: -Wall -Werror -threaded
  extra-libraries: leveldb

  Build-Depends:    base >= 4.7,
                    distributed-process-test,
                    replicated-log

Test-Suite random
  Type:             exitcode-stdio-1.0
  Main-Is:          random.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    Test
                    Transport

  Ghc-Options:      -Wall -Werror -threaded

  Build-Depends:    base >= 4.7,
                    binary >= 0.6,
                    consensus,
                    consensus-paxos,
                    constraints >= 0.4,
                    containers,
                    directory >= 1.2.1,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static >= 0.2.0,
                    exceptions,
                    filepath >= 1.3,
                    network-transport,
                    network-transport-inmemory,
                    network-transport-tcp,
                    unix,
                    random,
                    rank1dynamic >= 0.1,
                    network,
                    mtl >= 2.0,
                    replicated-log

Benchmark state
  Type:             exitcode-stdio-1.0
  Main-is:          state.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks

  Ghc-Options: -Wall -Werror -threaded -with-rtsopts=-N

  Build-Depends:    base >= 4.7,
                    binary,
                    consensus,
                    consensus-paxos,
                    constraints >= 0.4,
                    containers,
                    filepath,
                    replicated-log,
                    distributed-static,
                    distributed-process-test,
                    distributed-process-scheduler,
                    rank1dynamic,
                    network-transport,
                    network-transport-tcp,
                    directory,
                    stm

Benchmark state-distributed
  Type:             exitcode-stdio-1.0
  Main-is:          state-distributed.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks

  Ghc-Options: -Wall -Werror -threaded

  if flag(distributed-benchmarks)
    Build-Depends:  base >= 4.7,
                    consensus,
                    consensus-paxos,
                    constraints >= 0.4,
                    containers,
                    filepath,
                    replicated-log,
                    distributed-static,
                    distributed-process-test,
                    distributed-process-scheduler,
                    distributed-commands,
                    network-transport,
                    network-transport-tcp
  else
    Buildable:      False
