name:                rpclite
version:             0.1.0.0
license:             AllRightsReserved
copyright:           (C) 2013 Xyratex Technology Limited
category:            Network
build-type:          Custom
cabal-version:       >=1.10

Flag debug
  Description: Print messages when the RPC backend calls are evaluated
  Default: False

library
  exposed-modules:     Network.RPC.RPCLite
  build-depends:       base >=4.7 && <4.8
                     , binary >= 0.6
                     , bytestring
                     , containers >= 0.5
                     , filepath >= 1.3
  ghc-options:      -O -Wall -Werror -fprof-auto -fprof-auto-calls
  if flag(debug)
    cpp-options:      -DDEBUG

  cc-options: -Wno-attributes -Werror -g -DM0_INTERNAL= -DM0_EXTERN=extern
  include-dirs: rpclite
  extra-libraries: mero
  c-sources: rpclite/rpclite.c
             rpclite/rpclite_fom.c
             rpclite/rpclite_fop.c
             rpclite/rpclite_sender_fom.c
             rpclite/rpclite_fop_ff.c
  default-language:    Haskell2010

Test-Suite testrpclite
  Type:           exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:        testrpclite.hs
  hs-source-dirs: tests
  ghc-options:    -O -Wall -idist/build -threaded
  build-depends:  base >= 4.3 && < 5
                , binary
                , bytestring
                , rpclite
                , filepath
                , rpclite
