name:                rpclite
version:             0.1.0.0
license:             Apache-2.0
copyright:           (C) 2013 Seagate Technology LLC and/or its Affiliates
category:            Network
cabal-version:       >= 1.10
data-files:          rpclite/rpclite.h

custom-setup
  setup-depends: base, Cabal

library
  exposed-modules:     Mero
                       Mero.Concurrent
                       Mero.Lnet
                       Network.RPC.RPCLite
  build-depends:       base >= 4.7
                     , aeson
                     , attoparsec
                     , binary >= 0.6
                     , bytestring
                     , containers >= 0.5
                     , filepath >= 1.3
                     , hashable
                     , safecopy
                     , text

  ghc-options: -O -Wall -Werror -fprof-auto -fprof-auto-calls
  pkgconfig-depends:   mero >= 0.1.0
  include-dirs: rpclite
  c-sources: rpclite/rpclite.c
             rpclite/rpclite_fom.c
             rpclite/rpclite_fop.c
             rpclite/rpclite_fop_ff.c
             rpclite/forkm0os.c
             rpclite/m0init.c
  default-language:    Haskell2010

Executable testrpclite
  default-language:    Haskell2010
  main-is:        testrpclite.hs
  hs-source-dirs: tests

  ghc-options: -O -Wall -Werror -idist/build -threaded

  build-depends:  base >= 4.3
                , binary
                , bytestring
                , rpclite
                , filepath
                , rpclite
