name:                sodium-utils
version:             0.1.0.0
synopsis:            Utilities for the Sodium FRP library.
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              James ‘Twey’ Kay
maintainer:          twey@twey.co.uk
copyright:           (C) 2014 Tweag I/O Limited
category:            FRP
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Sodium.Util
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       time >=1.4 && <1.5,
                       sodium==0.10.*,
                       unbounded-delays==0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror