name:                sspl
version:             0.1.0.0
synopsis:            SSPL Bindings for Halon.
-- description:
license:             AllRightsReserved
copyright:           (c) 2014 Seagate Technology LLC
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

library
  exposed-modules:     SSPL.Bindings
  other-modules:       SSPL.Bindings.ActuatorRequest
                       SSPL.Bindings.ActuatorResponse
                       SSPL.Bindings.ClusterMap
                       SSPL.Bindings.CommandRequest
                       SSPL.Bindings.CommandResponse
                       SSPL.Bindings.SensorRequest
                       SSPL.Bindings.SensorResponse
                       SSPL.Bindings.Instances
  hs-source-dirs:      src
  build-depends:       base >=4.7,
                       aeson,
                       aeson-schema,
                       binary,
                       containers,
                       ghc-prim,
                       hashable,
                       regex-base,
                       regex-compat,
                       regex-pcre,
                       scientific,
                       text,
                       text-binary,
                       unordered-containers,
                       vector,
                       vector-binary-instances,
                       yaml
  if flag(maintainer)
    ghc-options: -Werror
  default-language:    Haskell2010

-- Generates SSPL.Bindings.* modules.
executable mkBindings
  main-is:             mkBindings.hs
  other-modules:       SSPL.Schemata.ActuatorRequest
                       SSPL.Schemata.ActuatorResponse
                       SSPL.Schemata.CommandRequest
                       SSPL.Schemata.CommandResponse
                       SSPL.Schemata.SensorRequest
                       SSPL.Schemata.SensorResponse
  hs-source-dirs:      app
  build-depends:       base >=4.7,
                       aeson-schema,
                       containers,
                       template-haskell,
                       text,
                       binary,
                       hashable
  default-language:    Haskell2010
  if flag(maintainer)
    ghc-options: -Werror

-- Not a test section, because this is a manual test, which may fail.
executable decoderRing
  main-is:             DecoderRing.hs
  hs-source-dirs:      test
  build-depends:       base >=4.7,
                       bytestring,
                       aeson,
                       sspl
  default-language:    Haskell2010
  if flag(maintainer)
    ghc-options: -Werror
