name:                sspl
version:             0.1.0.0
synopsis:            SSPL Bindings for Halon.
license:             Apache-2.0
copyright:           (c) 2014 Seagate Technology LLC
build-type:          Simple
cabal-version:       >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

library
  exposed-modules:     SSPL.Bindings
                       SSPL.Bindings.ActuatorRequest
                       SSPL.Bindings.ActuatorResponse
                       SSPL.Bindings.CommandRequest
                       SSPL.Bindings.CommandResponse
                       SSPL.Bindings.Instances
                       SSPL.Bindings.SensorRequest
                       SSPL.Bindings.SensorResponse
                       SSPL.Orphans
  hs-source-dirs:      src
  build-depends:       base >=4.7,
                       aeson,
                       aeson-schema >= 0.4,
                       binary,
                       cereal,
                       containers,
                       ghc-prim,
                       hashable,
                       regex-base,
                       regex-compat,
                       regex-pcre,
                       safecopy,
                       scientific >= 0.3.4.0,
                       text,
                       text-binary,
                       unordered-containers,
                       vector,
                       vector-binary-instances,
                       yaml
  if flag(maintainer)
    ghc-options: -Werror
  default-language:    Haskell2010

-- Generates SSPL.Bindings.* modules.
executable mkBindings
  main-is:             mkBindings.hs
  other-modules:       SSPL.Schemata.ActuatorRequest
                       SSPL.Schemata.ActuatorResponse
                       SSPL.Schemata.CommandRequest
                       SSPL.Schemata.CommandResponse
                       SSPL.Schemata.SensorRequest
                       SSPL.Schemata.SensorResponse
  hs-source-dirs:      app
  build-depends:       base >=4.7,
                       aeson-schema,
                       containers,
                       template-haskell,
                       text,
                       binary,
                       hashable
  default-language:    Haskell2010
  if flag(maintainer)
    ghc-options: -Werror

-- Not a test section, because this is a manual test, which may fail.
executable decoderRing
  main-is:             DecoderRing.hs
  hs-source-dirs:      test
  build-depends:       base >=4.7,
                       bytestring,
                       aeson,
                       sspl
  default-language:    Haskell2010
  if flag(maintainer)
    ghc-options: -Werror
