name:                cep
version:             0.1.0.0
synopsis:            A Complex Event Processing framework.
-- description:
license:             AllRightsReserved
copyright:           (C) 2014 Seagate Technology Limited.
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

-- ghc-heap-view cannot be built with profiling, does we need to drop
-- ghc-datasize which depends on it.
Flag profiling
  Description: Drop dependencies which can't be built with profiling enabled.
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Data.PersistMessage
                       Network.CEP
                       Network.CEP.Testing
  other-modules:       Network.CEP.Buffer
                       Network.CEP.Engine
                       Network.CEP.Execution
                       Network.CEP.Phase
                       Network.CEP.SM
                       Network.CEP.Types
                       Network.CEP.Utils

  other-extensions:    DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       DeriveGeneric
  build-depends:       base >=4.6 && <5,
                       distributed-process-scheduler,
                       binary==0.7.*,
                       bytestring,
                       mtl,
                       multimap==1.2.*,
                       containers==0.5.*,
                       operational,
                       text,
                       transformers,
                       exceptions,
                       lens,
                       uuid,
                       psqueues,
                       hashable
  default-language:    Haskell2010
  ghc-options:         -Wall

  if !flag(profiling)
    build-depends:     ghc-datasize
  if flag(maintainer)
    Ghc-Options: -Werror

Test-Suite unit-tests
  Type: exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs: tests
  Main-Is: UnitTests.hs
  Other-Modules:       CEP.Settings.Tests
                       Tests

  Ghc-Options: -threaded -Wall -eventlog

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends: base,
                 mtl,
                 network-transport,
                 network-transport-tcp,
                 distributed-process-scheduler,
                 cep,
                 binary,
                 containers,
                 random,
                 tasty,
                 tasty-hunit,
                 tasty-files,
                 uuid,
                 bytestring,
                 exceptions

Test-Suite unit-tests-scheduler
  Type: exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs: tests
  Main-Is: unit-tests-scheduler.hs
  Other-Modules:       CEP.Settings.Tests
                       Tests

  Ghc-Options: -threaded -Wall -eventlog

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends: base,
                 mtl,
                 network-transport-inmemory,
                 distributed-process-scheduler,
                 cep,
                 binary,
                 containers,
                 random,
                 tasty,
                 tasty-hunit,
                 tasty-files,
                 unix,
                 time,
                 uuid,
                 bytestring,
                 exceptions
