name:                cep
version:             0.1.0.0
synopsis:            A Complex Event Processing framework.
-- description:
license:             Apache-2.0
copyright:           (C) 2014 Seagate Technology Limited.
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- ghc-heap-view cannot be built with profiling, so we need to drop
-- ghc-datasize which depends on it.
Flag profiling
  Description: Drop dependencies which can't be built with profiling enabled.
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Data.PersistMessage
                       Network.CEP
                       Network.CEP.Log
                       Network.CEP.Testing
  other-modules:       Network.CEP.Buffer
                       Network.CEP.Engine
                       Network.CEP.Execution
                       Network.CEP.Phase
                       Network.CEP.SM
                       Network.CEP.Types
                       Network.CEP.Utils

  other-extensions:    DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       DeriveGeneric
  build-depends:       base >=4.6 && <5,
                       aeson,
                       distributed-process-scheduler,
                       binary>=0.7,
                       bytestring,
                       mtl,
                       multimap==1.2.*,
                       -- lts-9.21 provides containers-0.5.7.1.
                       -- We use `Data.Sequence ((:<|))` pattern synonym,
                       -- which appeared in containers-0.5.8.
                       containers >= 0.5.8,
                       operational,
                       text,
                       transformers,
                       exceptions,
                       lens,
                       uuid,
                       psqueues,
                       hashable,
                       halon-instances
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

  if !flag(profiling)
    build-depends:     ghc-datasize

Test-Suite unit-tests
  Type: exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs: tests
  Main-Is: UnitTests.hs
  Other-Modules:       CEP.Settings.Tests
                       Tests
                       Regression

  Ghc-Options: -threaded -Wall -Werror

  Build-Depends: base,
                 mtl,
                 network-transport,
                 network-transport-tcp,
                 distributed-process-scheduler,
                 cep,
                 binary,
                 containers,
                 random,
                 tasty,
                 tasty-hunit,
                 tasty-files,
                 uuid,
                 bytestring,
                 exceptions,
                 halon-instances

Test-Suite unit-tests-scheduler
  Type: exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs: tests
  Main-Is: unit-tests-scheduler.hs
  Other-Modules:       CEP.Settings.Tests
                       Tests
                       Regression

  Ghc-Options: -threaded -Wall -Werror

  Build-Depends: base,
                 mtl,
                 network-transport-inmemory,
                 distributed-process-scheduler,
                 cep,
                 binary,
                 containers,
                 random,
                 tasty,
                 tasty-hunit,
                 tasty-files,
                 unix,
                 time,
                 uuid,
                 bytestring,
                 exceptions,
                 halon-instances
